--- a/game4.html
+++ b/game4.html
@@ -9,6 +9,8 @@
     <link href="./styles/game.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href=“https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css” rel=“stylesheet”>
+
 </head>
 
 <body>
@@ -42,14 +44,26 @@
         <div class="main-1 ">
             <div>
                 <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Put the images in the correct order </p>
+                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Put the images in the correct order
+                    </p>
                 </div>
                 <div class="logo d-flex pt-5">
-                    <div class="mx-auto mt-5">
-                        <img class="img-fluid" src="./images/order-1.svg" alt="">
-                        <img class=" img-fluid" src="./images/order-2.svg" alt="">
-                        <img class="img-fluid" src="./images/order-3.svg" alt="">
+                    <div class="row mx-auto">
+                        <div class="col-4" ondragover="onDragOver(event);" ondrop="onDrop(event);">
+                            <img id="draggable-1" class="example-draggable" draggable="true" class="img-fluid"
+                                ondragstart="onDragStart(event);" src="./images/order-1.svg" alt="">
+                        </div>
+                        <div class="col-4">
+                            <img id="draggable-2" class="example-draggable2" draggable="true" class=" img-fluid"
+                                ondragstart="onDragStart(event);" src="./images/order-2.svg" alt="">
+                        </div>
+                        <div class="col-4">
+
+                            <img id="draggable-3" class="example-draggable3" draggable="true" class="img-fluid"
+                                ondragstart="onDragStart(event);" src="./images/order-3.svg" alt="">
+                        </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -68,6 +82,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <script src="./js/game.js"></script>
+    <script src="./js/game4.js"></script>
+
+
 </body>
 
 </html>
