--- a/game6.html
+++ b/game6.html
@@ -72,7 +72,7 @@
         crossorigin="anonymous"></script>
 
         <script src="./js/game.js"></script>
-        <script src="./js/assessmen6.js"></script>
+        <script src="./js/game6.js"></script>
 </body>
 
 </html>
